Change IfElseStat to accept StatementList instead of generic Node